--- a/FY19/Views/Shared/Widgets/AnchorLinkList.cshtml
+++ b/FY19/Views/Shared/Widgets/AnchorLinkList.cshtml
@@ -84,7 +84,7 @@
     {
         <li>@if (url1 != null)
             {
-                <a href="@url1" target="_blank">@Html.Raw(HttpUtility.HtmlDecode(text1.Replace(Environment.NewLine, "<br/>")))</a>
+                <a href="@url1">@Html.Raw(HttpUtility.HtmlDecode(text1.Replace(Environment.NewLine, "<br/>")))</a>
             }
             else
             {
@@ -96,7 +96,7 @@
     {
         <li>@if (url2 != null)
             {
-                <a href="@url2" target="_blank">@Html.Raw(HttpUtility.HtmlDecode(text2.Replace(Environment.NewLine, "<br />")))</a>
+                <a href="@url2">@Html.Raw(HttpUtility.HtmlDecode(text2.Replace(Environment.NewLine, "<br />")))</a>
             }
             else
             {
@@ -108,7 +108,7 @@
     {
         <li>@if (url3 != null)
             {
-                <a href="@url3" target="_blank">@Html.Raw(HttpUtility.HtmlDecode(text3.Replace(Environment.NewLine, "<br />")))</a>
+                <a href="@url3">@Html.Raw(HttpUtility.HtmlDecode(text3.Replace(Environment.NewLine, "<br />")))</a>
             }
             else
             {
@@ -120,7 +120,7 @@
     {
         <li>@if (url4 != null)
             {
-                <a href="@url4" target="_blank">@Html.Raw(HttpUtility.HtmlDecode(text4.Replace(Environment.NewLine, "<br />")))</a>
+                <a href="@url4">@Html.Raw(HttpUtility.HtmlDecode(text4.Replace(Environment.NewLine, "<br />")))</a>
             }
             else
             {
@@ -132,7 +132,7 @@
     {
         <li>@if (url5 != null)
             {
-                <a href="@url5" target="_blank">@Html.Raw(HttpUtility.HtmlDecode(text5.Replace(Environment.NewLine, "<br />")))</a>
+                <a href="@url5">@Html.Raw(HttpUtility.HtmlDecode(text5.Replace(Environment.NewLine, "<br />")))</a>
             }
             else
             {
@@ -144,7 +144,7 @@
     {
         <li>@if (url6 != null)
             {
-                <a href="@url6" target="_blank">@Html.Raw(HttpUtility.HtmlDecode(text6.Replace(Environment.NewLine, "<br />")))</a>
+                <a href="@url6">@Html.Raw(HttpUtility.HtmlDecode(text6.Replace(Environment.NewLine, "<br />")))</a>
             }
             else
             {
@@ -156,7 +156,7 @@
     {
         <li>@if (url7 != null)
             {
-                <a href="@url7" target="_blank">@Html.Raw(HttpUtility.HtmlDecode(text7.Replace(Environment.NewLine, "<br />")))</a>
+                <a href="@url7">@Html.Raw(HttpUtility.HtmlDecode(text7.Replace(Environment.NewLine, "<br />")))</a>
             }
             else
             {
@@ -168,7 +168,7 @@
     {
         <li>@if (url8 != null)
             {
-                <a href="@url8" target="_blank">@Html.Raw(HttpUtility.HtmlDecode(text8.Replace(Environment.NewLine, "<br />")))</a>
+                <a href="@url8">@Html.Raw(HttpUtility.HtmlDecode(text8.Replace(Environment.NewLine, "<br />")))</a>
             }
             else
             {
@@ -180,7 +180,7 @@
     {
         <li>@if (url9 != null)
             {
-                <a href="@url9" target="_blank">@Html.Raw(HttpUtility.HtmlDecode(text9.Replace(Environment.NewLine, "<br />")))</a>
+                <a href="@url9">@Html.Raw(HttpUtility.HtmlDecode(text9.Replace(Environment.NewLine, "<br />")))</a>
             }
             else
             {
@@ -192,7 +192,7 @@
     {
         <li>@if (url10 != null)
             {
-                <a href="@url10" target="_blank">@Html.Raw(HttpUtility.HtmlDecode(text10.Replace(Environment.NewLine, "<br />")))</a>
+                <a href="@url10">@Html.Raw(HttpUtility.HtmlDecode(text10.Replace(Environment.NewLine, "<br />")))</a>
             }
             else
             {
