Download Item Widget: Not opening new window

--- a/FY19/Views/Shared/Widgets/DownloadItemView.cshtml
+++ b/FY19/Views/Shared/Widgets/DownloadItemView.cshtml
@@ -32,7 +32,7 @@
 
     string tBlank = string.Empty;
 
-    if (Model.Properties.Url == null)
+    if (Model.Properties.Url != null)
     {
         tBlank = "target = _blank";
     }
